Small Text Change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
 
     <data>
 
+        <import type="android.view.View"/>
         <variable
             name="handler"
             type="binding_demo.coderzheaven.com.bindingdemo.MyHandler" />
@@ -54,10 +55,14 @@
             android:layout_height="wrap_content"
             android:text="@{user3.name.get(0)}" />
 
-
-
         <Button
             android:id="@+id/b1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/b2"
+            android:onClick="@{handler.onClick}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
